<resources>
    <string name="app_name">A3csci3130</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create Business</string>
    <string name="business_num">[ Business Number ]</string>
    <string name="business_name">[ Name ]</string>
    <string name="business_type">"     Primary Business -"</string>
    <string-array name="bus_type_array">
        <item>Fisher</item>
        <item>Distributor</item>
        <item>Processor</item>
        <item>Fish Monger</item>
    </string-array>
    <string name="business_address">[ Address ]</string>
    <string name="business_prov" translatable="false">"     Province/Territory -"</string>
    <string-array name="business_prov_array">
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
        <item> </item>
    </string-array>
</resources>
